[package]
name = "nes"
version = "0.1.0"
authors = ["Carson Swoveland <sciencedude2003@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.5.1"
num-traits = "0.2"
num-derive = "0.3"
bitfield = "0.13.2"
lazy_static = "1.4.0"
rust_2c02 = { path = "../Rust/rust_2c02", features = ["std"] }

[dependencies.sdl2]
version = "0.34"
default-features = false
features = ["gfx"]

[[bin]]
name="nes"
path="src/main.rs"

[lib]
name="nes"
path="src/lib.rs"

[profile.release]
debug = true
